--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -201,7 +201,10 @@ UpSetR::upset(UpSetR::fromList(listInput), order.by = "freq", text.scale = 1.3, 
 
 ```{r}
 # create the table of kottgen snps from the data
+# age, sex, and bmi adjusted
 
+# still need to flip snps to be in the same order as kottgen
+uk_kot_t1 %>% select(-file, -TEST, -SE, -NMISS,-STAT, -POS) %>% mutate_at(., vars("OR",contains('95')), funs(sprintf("%.2f",. ))) %>% unite("CI",c("L95","U95"), sep = " -") %>% mutate(SNP = paste0(SNP, ' (', grail_gene,')'), Effect = paste0(OR, ' [', CI,'], ', P)) %>% arrange(P) %>%  select(-grail_gene, -OR, -CI, -P, -CHR) %>% spread(key = gout, value = Effect) %>% select(-all)%>% kable(., format = 'latex', caption = '(\\#tab:ukbbkot)') %>% kable_styling(latex_options = 'scale_down')
 
 ```
 
